Update and rename index1.html to index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>мой первый сайт)))</h1>
     <p>делал сам честно!</p>
     <br><br>
-    <a href="#" class="button" onclick="alert('скинуть будущему программисту на чай +79216274225 сбербанк')">Нажми сюда)</a>
+    <a href="#" class="button" onclick="alert('скинуть будущему программисту на чай:+79216274225 сбербанк')">Нажми сюда)</a>
 </body>
+
 </html>
