--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Манул, [04.02.2026 12:08]
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -92,13 +92,13 @@
     <div class="game-box">
         <h3>моя первая мини игра!</h3>
         <p>Счет: <span id="score">0</span></p>
-        <button class="click-btn" onclick="addScore()">КЛИК!</button>
+        <button class="click-btn" onclick="addScore()">КЛИКНИ!</button>
         <br>
         <button class="reset-btn" onclick="resetScore()">обнулить счет</button>
     </div>
 
     <div class="game-box">
-        <h3>Змейка для телефона</h3>
+        <h3>Змейка</h3>
         <canvas id="snakeGame" width="400" height="400"></canvas>
         <div class="controls">
             <div></div><button class="btn-dir" onclick="changeDir('up')">▲</button><div></div>
@@ -134,7 +134,7 @@
             }
         }
 
-Манул, [04.02.2026 12:08]
+Манул, [04.02.2026 12:13]
 // --- ЛОГИКА ЗМЕЙКИ ---
         const canvas = document.getElementById("snakeGame");
         const ctx = canvas.getContext("2d");
