--- a/index.html
+++ b/index.html
@@ -3,16 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Мой супер сайт</title>
+    <title>Мой сайт</title>
     <style>
-        /* --- ОБЩИЙ СТИЛЬ --- */
-        body { 
-            font-family: -apple-system, sans-serif; 
-            text-align: center; 
-            padding: 20px; 
-            background-color: #f0f0f0; 
-            margin: 0; 
-        }
+        /* --- СТИЛИ --- */
+        body { font-family: -apple-system, sans-serif; text-align: center; padding: 20px; background-color: #f0f0f0; margin: 0; }
         .game-box {
             background: white; padding: 15px; border-radius: 15px; 
             box-shadow: 0 4px 10px rgba(0,0,0,0.1); display: inline-block;
@@ -20,35 +14,31 @@
         }
         .button-tea { 
             display: inline-block; padding: 10px 20px; background: #fff; 
-            color: black; border: 1px solid #ccc; border-radius: 8px; 
-            margin-bottom: 20px; cursor: pointer; font-weight: bold;
+            border: 1px solid #ccc; border-radius: 8px; margin-bottom: 20px; cursor: pointer; font-weight: bold;
         }
 
-        /* --- ЧАТ (TELEGRAM STYLE) --- */
+        /* ЧАТ */
         #cList {
-            height: 250px; overflow-y: auto; 
-            background: #e5ddd5; /* Классический цвет фона ТГ */
-            padding: 10px; border-radius: 10px; 
-            display: flex; flex-direction: column; border: 1px solid #ddd;
+            height: 250px; overflow-y: auto; background: #e5ddd5; 
+            padding: 10px; border-radius: 10px; display: flex; flex-direction: column; border: 1px solid #ddd;
         }
         .message {
             max-width: 80%; margin-bottom: 8px; padding: 8px 12px;
-            border-radius: 12px; font-size: 14px; position: relative;
-            text-align: left; box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+            border-radius: 12px; font-size: 14px; text-align: left; box-shadow: 0 1px 1px rgba(0,0,0,0.1);
         }
         .msg-my { align-self: flex-end; background: #efffde; border-bottom-right-radius: 2px; }
-        .msg-other { align-self: flex-start; background: white; border-bottom-left-radius: 2px; }
         .msg-name { font-weight: bold; font-size: 11px; color: #3390ec; display: block; }
         .msg-time { font-size: 9px; color: #999; float: right; margin-top: 4px; margin-left: 5px; }
         .chat-input-area { display: flex; gap: 5px; margin-top: 10px; }
         .chat-input-area input { flex: 1; padding: 10px; border: 1px solid #ccc; border-radius: 20px; outline: none; }
         .send-btn { background: #3390ec; color: white; border: none; width: 40px; height: 40px; border-radius: 50%; cursor: pointer; }
 
-        /* --- КЛИКЕР --- */
+        /* КЛИКЕР */
         #score { font-size: 40px; font-weight: bold; color: #2ecc71; margin: 5px 0; }
-        .click-btn { padding: 15px; background: lime; border: 2px solid #333; border-radius: 12px; font-weight: bold; width: 100%; cursor: pointer; touch-action: manipulation; }
+        .click-btn { padding: 15px; background: lime; border: 2px solid #333; border-radius: 12px; font-weight: bold; width: 100%; cursor: pointer; }
+        .reset-link { color: red; text-decoration: underline; cursor: pointer; font-size: 12px; display: block; margin-top: 10px; }
 
-        /* --- ЗМЕЙКА --- */
+        /* ЗМЕЙКА */
         canvas { background: #000; display: block; margin: 10px auto; width: 280px; height: 280px; border-radius: 5px; }
         .snake-ctrl { display: grid; grid-template-columns: repeat(3, 55px); gap: 8px; justify-content: center; }
         .s-btn { width: 55px; height: 55px; background: #fff; border: 1px solid #ccc; border-radius: 10px; font-size: 18px; cursor: pointer; }
@@ -57,10 +47,7 @@
 <body>
 
     <h1>Мой первый сайт!</h1>
-    
-    <div class="button-tea" onclick="alert('скинуть будущему программисту на чай: +79216274225 сбербанк')">
-        Нажми сюда ☕
-    </div>
+    <div class="button-tea" onclick="alert('скинуть будущему программисту на чай: +79216274225 сбербанк')">Нажми сюда ☕</div>
 
     <hr>
 
@@ -68,6 +55,7 @@
         <h3>Кликер</h3>
         <div id="score">0</div>
         <button class="click-btn" onclick="addScore()">КЛИК!</button>
+        <span class="reset-link" onclick="resetScore()">обнулить счет</span>
     </div>
 
     <div class="game-box">
@@ -83,13 +71,7 @@
 
     <div class="game-box">
         <h3>чат (прототип номер 1)</h3>
-        <div id="cList">
-            <div class="message msg-other">
-                <span class="msg-name">Система</span>
-                Добро пожаловать в чат!
-                <span class="msg-time">сейчас</span>
-            </div>
-        </div>
+        <div id="cList"></div>
         <div class="chat-input-area">
             <input type="text" id="nInp" placeholder="Имя" style="width: 70px;">
             <input type="text" id="mInp" placeholder="Сообщение...">
@@ -97,16 +79,69 @@
         </div>
     </div>
 
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+        import { getDatabase, ref, push, onValue } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
+
+        // Твои настройки из скриншота
+        const firebaseConfig = {
+            apiKey: "AIzaSyChSk0gETRBQ391e4BjPqFsKc_dzjBmT58",
+            authDomain: "my-chat-52203.firebaseapp.com",
+            databaseURL: "https://my-chat-52203-default-rtdb.firebaseio.com",
+            projectId: "my-chat-52203",
+            storageBucket: "my-chat-52203.firebasestorage.app",
+            messagingSenderId: "336944595953",
+            appId: "1:336944595953:web:24bfdf5041fc2040d17a50"
+        };
+
+        const app = initializeApp(firebaseConfig);
+        const db = getDatabase(app);
+        const messagesRef = ref(db, 'chat_messages');
+
+        window.addC = function() {
+            const n = document.getElementById('nInp').value;
+            const m = document.getElementById('mInp').value;
+            if(n && m) {
+                const now = new Date();
+                const time = now.getHours() + ":" + (now.getMinutes()<10?'0':'') + now.getMinutes();
+                push(messagesRef, { name: n, text: m, time: time });
+                document.getElementById('mInp').value = "";
+            }
+        };
+
+        onValue(messagesRef, (snapshot) => {
+            const data = snapshot.val();
+            const list = document.getElementById('cList');
+            list.innerHTML = "";
+            for (let id in data) {
+                const msg = data[id];
+                list.innerHTML += `<div class="message msg-my"><span class="msg-name">${msg.name}</span>${msg.text}<span class="msg-time">${msg.time}</span></div>`;
+            }
+            list.scrollTop = list.scrollHeight;
+        });
+    </script>
+
     <script>
-        // --- ЛОГИКА КЛИКЕРА ---
+        // КЛИКЕР
         let count = parseInt(localStorage.getItem('myScore')) || 0;
         document.getElementById('score').innerText = count;
+
         function addScore() {
-            count++; document.getElementById('score').innerText = count;
+            count++;
+            document.getElementById('score').innerText = count;
             localStorage.setItem('myScore', count);
+            if(count === 100) alert("100 кликов! Иди потрогай траву)");
         }
 
-        // --- ЛОГИКА ЗМЕЙКИ ---
+        function resetScore() {
+            if(confirm("Обнулить счет?")) {
+                count = 0;
+                document.getElementById('score').innerText = 0;
+                localStorage.removeItem('myScore');
+            }
+        }
+
+        // ЗМЕЙКА
         const canvas = document.getElementById("snakeGame");
         const ctx = canvas.getContext("2d");
         const box = 20;
@@ -141,30 +176,6 @@
             }
         }
         setInterval(drawSnake, 150);
-
-        // --- ЛОГИКА ЧАТА ---
-        let coms = JSON.parse(localStorage.getItem('myComs')) || [];
-        function renderC() {
-            const list = document.getElementById('cList');
-            list.innerHTML = `<div class="message msg-other"><span class="msg-name">Система</span>Добро пожаловать в чат!<span class="msg-time">сейчас</span></div>`;
-            coms.forEach(c => {
-                list.innerHTML += `<div class="message msg-my"><span class="msg-name" style="color:#2ecc71">${c.n}</span>${c.m}<span class="msg-time">${c.t}</span></div>`;
-            });
-            list.scrollTop = list.scrollHeight;
-        }
-        function addC() {
-            const n = document.getElementById('nInp').value;
-            const m = document.getElementById('mInp').value;
-            if(n && m) {
-                const now = new Date();
-                const time = now.getHours() + ":" + (now.getMinutes()<10?'0':'') + now.getMinutes();
-                coms.push({n: n, m: m, t: time});
-                localStorage.setItem('myComs', JSON.stringify(coms));
-                document.getElementById('mInp').value = "";
-                renderC();
-            }
-        }
-        renderC();
     </script>
 </body>
 </html>
